# SISQUAL-data-and-methods

./: README.md
EMD/: TStoSazEMD.ipynb
src/backend/services/v1.0/train_model/: README.md  pyproject.toml  requirements.txt
src/backend/services/v1.0/train_model/app/: alembic.txt  app.py  dependencies.py  main.py  sql_app.db
src/backend/services/v1.0/train_model/app/alembic/versions/: 9ae801508331_add_model_id_to_tasks_table.py
src/backend/services/v1.0/train_model/app/api/v1/: api.py
src/backend/services/v1.0/train_model/app/api/v1/endpoints/: clients.py  models.py  tasks.py  train_btask.py
src/backend/services/v1.0/train_model/app/core/: config.py
src/backend/services/v1.0/train_model/app/db/: crud.py  database.py  models.py  schemas.py  session.py
src/backend/services/v1.0/train_model/app/dependencies/: auth.py
src/backend/services/v1.0/train_model/app/endpoints/: train_btask.py
src/backend/services/v1.0/train_model/app/models/: models.py
src/backend/services/v1.0/train_model/app/models/ml/AB19GF/: MLPRegressor_Sales_17_12_2022_18_58_10_787618.joblib
src/backend/services/v1.0/train_model/app/models/ml/AR21TY/: HistGradientBoostingRegressor_Sales V_27_12_2022_16_46_42_677790.joblib  (+1 more)
src/backend/services/v1.0/train_model/app/monitor/: locustfile.py
src/backend/services/v1.0/train_model/app/routers/: parameters_route.py  train_btask.py
src/backend/services/v1.0/train_model/app/tests/: crud_test.py
src/backend/services/v1.0/train_model/app/tools/: auxiliary_functions.py
src/backend/services/v1.0/train_model/tests/: parameters_test.py
(+931 files in other folders)
