[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
hypercorn = "^0.14.3"
daphne = "^4.0.0"
sqlalchemy = "^1.4.45"
trio = "^0.22.0"
numpy = "^1.23.5"
scikit-learn = "^1.2.0"
alembic = "^1.9.0"
tenacity = "^8.1.0"
pandas = "^1.5.2"
locust = "^2.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
